fix alignments menu

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-arting {
   justify-content: space-between;
-  border-bottom: 0.5px solid rgba($color: #000000, $alpha: 0.03);
+  border-bottom: 0.5px solid rgba($color: #000000, $alpha: 0.07);
 }
 
 .navbar-arting .navbar-collapse {
@@ -18,15 +18,20 @@
   font-weight: 700;
   padding-left: 12px;
 }
-
-.logo-arting-footer{
-  color: $body-color;
-  font-family: $headers-font;
-  font-size: 1.5rem;
-  font-weight: 700;
+.logo-arting:hover{
+  color: $success;
+  opacity: 0.9;
 }
 
 .nav-link-text{
-  padding-left: 8px;
   font-weight: 500;
+}
+
+.nav-item{
+  padding-left: 12px;
+}
+
+.navbar-avatar{
+ margin-top: 8px;
+ margin-bottom: 8px;
 }
