--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -51,3 +51,10 @@
   font-size: 0.9rem;
   font-style: italic;
 }
+
+.logo-arting-footer{
+  color: $body-color;
+  font-family: $headers-font;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
